--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,3 +1,9 @@
-<p class="font-weight-bold">Hi This Vaibhav</p>
-<hr>
-<app-servers></app-servers>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <h3>I am in AppComponent</h3>
+            <hr>
+            <app-servers></app-servers>
+        </div>
+    </div>
+</div>
