--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -1,7 +1,10 @@
 <label>Server Name</label>
+<!--<input type="text" class="form-control" 
+       (input)="onUpdateServerName($event)"/> -->
+
 <input type="text" class="form-control" 
-       (input)="onUpdateServerName($event)"/>
-<p>{{ serverName }}</p>
+       [(ngModel)]="serverName"/>
+
 <button class="btn btn-primary" 
         [disabled]="!allowAddNewServer"
         (click)="onCreateServer()">Add Server</button>
