--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -7,6 +7,10 @@
 
             <app-warning-alert></app-warning-alert>
             <app-success-alert></app-success-alert>
+
+            <hr>
+            <app-user-detail></app-user-detail>
+
         </div>
     </div>
 </div>
