--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -5,11 +5,11 @@
             <hr>
             <app-servers></app-servers>
 
-            <app-warning-alert></app-warning-alert>
+            <!--<app-warning-alert></app-warning-alert>
             <app-success-alert></app-success-alert>
 
             <hr>
-            <app-user-detail></app-user-detail>
+            <app-user-detail></app-user-detail>-->
 
         </div>
     </div>
