--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -12,5 +12,4 @@
 <!--<p>Interpolation -- {{ allowAddNewServer }}</p>
 <p [innerText]="allowAddNewServer"></p>-->
 <p *ngIf="isServerCreated">{{ serverCreationStatus }}</p>
-<app-server></app-server>
-<app-server></app-server>
+<app-server *ngFor="let server of servers"></app-server>
