--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -11,6 +11,8 @@
             <hr>
             <app-user-detail></app-user-detail>-->
 
+            <app-directives-example></app-directives-example>
+
         </div>
     </div>
 </div>
