--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -5,7 +5,7 @@
 <input type="text" class="form-control" 
        [(ngModel)]="serverName"/>
 
-<button class="btn btn-primary" 
+<button class="btn btn-sm btn-primary mt-2 mb-2" 
         [disabled]="!allowAddNewServer"
         (click)="onCreateServer()">Add Server</button>
 
