--- a/recipe-webapp/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/recipe-webapp/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,1 +1,25 @@
-<app-recipe-item></app-recipe-item>
+<div class="row mt-3 mb-2">
+    <div class="col-md-12">
+        <button class="btn btn-success">New Recipe</button>
+    </div>
+</div>
+<hr>
+<div class="row">
+    <div class="col-md-12">
+        <a href="#" class="list-group-item clearfix" *ngFor="let recipe of recipes">
+            <div class="row">
+                <div class="col-md-8">
+                    <h4 class="list-group-item-heading">{{recipe.name}}</h4>
+                    <p class="list-group-item-text">{{recipe.description}}</p>
+                </div>
+                <div class="col-md-4">
+                    <img [src]="recipe.imagePath"
+                        alt="{{recipe.name}}" 
+                        class="img-responsive" 
+                        style="max-height: 65px;">
+                </div>
+            </div>
+        </a>
+        <app-recipe-item></app-recipe-item>
+    </div>
+</div>
