--- a/recipe-webapp/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/recipe-webapp/src/app/recipes/recipe-list/recipe-list.component.html
@@ -15,7 +15,7 @@
                 <div class="col-md-4">
                     <img [src]="recipe.imagePath"
                         alt="{{recipe.name}}" 
-                        class="img-responsive" 
+                        class="img-fluid" 
                         style="max-height: 65px;">
                 </div>
             </div>
