--- a/recipe-webapp/src/app/shopping-list/shopping-list.component.html
+++ b/recipe-webapp/src/app/shopping-list/shopping-list.component.html
@@ -2,6 +2,11 @@
   <div class="col-md-10">
     <app-shopping-edit></app-shopping-edit>
     <hr>
-    <p>The list</p>
+    <ul class="list-group">
+      <li class="list-group-item" style="cursor:pointer"
+        *ngFor="let ingredient of ingredients">
+        {{ingredient.name}}({{ingredient.amount}})
+      </li>
+    </ul>
   </div>
 </div>
