--- a/recipe-webapp/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/recipe-webapp/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,20 +6,9 @@
 <hr>
 <div class="row">
     <div class="col-md-12">
-        <a href="#" class="list-group-item clearfix" *ngFor="let recipe of recipes">
-            <div class="row">
-                <div class="col-md-8">
-                    <h4 class="list-group-item-heading">{{recipe.name}}</h4>
-                    <p class="list-group-item-text">{{recipe.description}}</p>
-                </div>
-                <div class="col-md-4">
-                    <img [src]="recipe.imagePath"
-                        alt="{{recipe.name}}" 
-                        class="img-fluid" 
-                        style="max-height: 65px;">
-                </div>
-            </div>
-        </a>
-        <app-recipe-item></app-recipe-item>
+        <app-recipe-item 
+            *ngFor="let recipeEl of recipes" [recipe]="recipeEl"
+            (recipeSelected)="onRecipeSelected(recipeEl)">
+        </app-recipe-item>
     </div>
 </div>
