--- a/directives/src/app/app.component.html
+++ b/directives/src/app/app.component.html
@@ -25,6 +25,7 @@
           </li>
         </div>
       </ul>
+      <p appBasicHighlight>Style me as Basic Directive</p>
     </div>
   </div>
 </div>
