--- a/directives/src/app/app.component.html
+++ b/directives/src/app/app.component.html
@@ -26,7 +26,7 @@
         </div>
       </ul>
       <p appBasicHighlight>Style me as Basic Directive</p>
-      <p appBetterHighlight>Style me as better Directive</p>
+      <p appBetterHighlight [defaultColor]="'yellow'" [hoverColor]="'red'">Style me as better Directive</p>
     </div>
   </div>
 </div>
