--- a/recipe-webapp/src/app/header/header.component.html
+++ b/recipe-webapp/src/app/header/header.component.html
@@ -13,11 +13,11 @@
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown" appDropdown #r="appDropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Manage
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown" [ngClass]="{'show': r.isOpen}">
                     <a class="dropdown-item" href="#">Save Data</a>
                     <a class="dropdown-item" href="#">Fetch Data</a>
                 </div>
