--- a/recipe-webapp/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/recipe-webapp/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -10,14 +10,16 @@
 </div>
 <div class="row">
   <div class="col-md-12">
-    <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Manage
-    </button>
-    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-      <a class="dropdown-item" href="#">To Shopping List</a>
-      <a class="dropdown-item" href="#">Edit Recipe</a>
-      <a class="dropdown-item" href="#">Delete Recipe</a>
-    </div>    
+    <div class="dropdown" appDropdown #r="appDropdown">
+      <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Manage
+      </button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" [ngClass]="{'show': r.isOpen}">
+        <a class="dropdown-item" href="#">To Shopping List</a>
+        <a class="dropdown-item" href="#">Edit Recipe</a>
+        <a class="dropdown-item" href="#">Delete Recipe</a>
+      </div>
+    </div>   
   </div>
 </div>
 <div class="row">
