--- a/recipe-webapp/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/recipe-webapp/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -15,7 +15,7 @@
         Manage
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" [ngClass]="{'show': r.isOpen}">
-        <a class="dropdown-item" href="#">To Shopping List</a>
+        <a class="dropdown-item" href="#" (click)="onAddToShoppingList()">To Shopping List</a>
         <a class="dropdown-item" href="#">Edit Recipe</a>
         <a class="dropdown-item" href="#">Delete Recipe</a>
       </div>
@@ -29,6 +29,11 @@
 </div>
 <div class="row">
   <div class="col-md-12">
-    Ingredients
+    <ul class="list-group">
+      <li class="list-group-item" style="cursor:pointer"
+        *ngFor="let ingredient of recipe.ingredients">
+        {{ingredient.name}} ({{ingredient.amount}})
+      </li>
+    </ul>    
   </div>
 </div>
