--- a/recipe-webapp/src/app/header/header.component.html
+++ b/recipe-webapp/src/app/header/header.component.html
@@ -1,25 +1,25 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Recipe Book</a>
+    <a class="navbar-brand" style="cursor: pointer;">Recipe Book</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#" (click)="onSelect('recipes')">Recipes</a>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" [routerLink]="['/recipes']">Recipes</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#" (click)="onSelect('shopping-list')">Shopping List</a>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" [routerLink]="['/shopping-list']">Shopping List</a>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown" appDropdown #r="appDropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" style="cursor: pointer;" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Manage
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown" [ngClass]="{'show': r.isOpen}">
-                    <a class="dropdown-item" href="#">Save Data</a>
-                    <a class="dropdown-item" href="#">Fetch Data</a>
+                    <a class="dropdown-item" style="cursor: pointer;">Save Data</a>
+                    <a class="dropdown-item" style="cursor: pointer;">Fetch Data</a>
                 </div>
             </li>
         </ul>
