--- a/recipe-webapp/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/recipe-webapp/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -15,9 +15,9 @@
         Manage
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" [ngClass]="{'show': r.isOpen}">
-        <a class="dropdown-item" href="#" (click)="onAddToShoppingList()">To Shopping List</a>
-        <a class="dropdown-item" href="#">Edit Recipe</a>
-        <a class="dropdown-item" href="#">Delete Recipe</a>
+        <a class="dropdown-item" style="cursor: pointer;" (click)="onAddToShoppingList()">To Shopping List</a>
+        <a class="dropdown-item" style="cursor: pointer;">Edit Recipe</a>
+        <a class="dropdown-item" style="cursor: pointer;">Delete Recipe</a>
       </div>
     </div>   
   </div>
