--- a/recipe-webapp/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/recipe-webapp/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,4 @@
-<a href="#" class="list-group-item clearfix" (click)="onSelected()">
+<a style="cursor: pointer;" class="list-group-item clearfix" (click)="onSelected()">
   <div class="row">
     <div class="col-md-8">
       <h4 class="list-group-item-heading">{{recipe.name}}</h4>
