--- a/recipe-webapp/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/recipe-webapp/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row mt-3 mb-2">
     <div class="col-md-12">
-        <button class="btn btn-success">New Recipe</button>
+        <button class="btn btn-success" (click)="onNewRecipe()">New Recipe</button>
     </div>
 </div>
 <hr>
