--- a/forms-template-driven/src/app/app.component.html
+++ b/forms-template-driven/src/app/app.component.html
@@ -23,7 +23,9 @@
               ngModel
               name="email"
               required
-              email>
+              email
+              #email="ngModel">
+            <small class="form-text text-muted" *ngIf="!email.valid && email.touched">Please enter valid email!</small>
           </div>
         </div>
         <div class="form-group">
