--- a/forms-reactive/src/app/app.component.html
+++ b/forms-reactive/src/app/app.component.html
@@ -9,6 +9,10 @@
             id="username"
             formControlName="username"
             class="form-control">
+          <small
+            class="text-muted"
+            *ngIf="!signupForm.get('username').valid && signupForm.get('username').touched"
+            >Please enter username</small>
         </div>
         <div class="form-group">
           <label for="email">email</label>
@@ -17,6 +21,10 @@
             id="email"
             formControlName="email"
             class="form-control">
+          <small
+            class="text-muted"
+            *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched"
+            >Please enter valid email</small>
         </div>
         <div class="radio" *ngFor="let gender of genders">
           <label>
@@ -26,7 +34,17 @@
               [value]="gender">{{ gender }}
           </label>
         </div>
-        <button class="btn btn-primary" type="submit">Submit</button>
+        <p>
+          <small
+            class="text-muted"
+            *ngIf="!signupForm.valid && signupForm.touched"
+            >Please enter valid data</small>
+        </p>
+        <button
+          class="btn btn-primary"
+          type="submit"
+          [disabled]="!signupForm.valid"
+          >Submit</button>
       </form>
     </div>
   </div>
