--- a/forms-reactive/src/app/app.component.html
+++ b/forms-reactive/src/app/app.component.html
@@ -36,6 +36,13 @@
               [value]="gender">{{ gender }}
           </label>
         </div>
+        <div formArrayName="hobbies">
+          <h4>Your Hobbies</h4>
+          <button class="btn btn-success btn-sm" (click)="onAddHobby()" type="button">Add Hobby</button>
+          <div class="form-group" *ngFor="let control of signupForm.get('hobbies').controls; let i = index">
+            <input class="form-control" type="text" [formControlName]="i">
+          </div>
+        </div>
         <p>
           <small
             class="text-muted"
