--- a/forms-reactive/src/app/app.component.html
+++ b/forms-reactive/src/app/app.component.html
@@ -13,7 +13,14 @@
             <small
               class="text-muted"
               *ngIf="!signupForm.get('userData.username').valid && signupForm.get('userData.username').touched"
-              >Please enter username</small>
+              >
+              <span *ngIf="signupForm.get('userData.username').errors['nameIsForbidden']">
+                This is forbidden name!
+              </span>
+              <span *ngIf="signupForm.get('userData.username').errors['required']">
+                Username is required!
+              </span>
+            </small>
           </div>
           <div class="form-group">
             <label for="email">email</label>
