--- a/recipe-webapp/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/recipe-webapp/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-12">
-    <form>
+    <form (ngSubmit)="onSubmitItem(f)" #f="ngForm">
       <div class="row">
         <div class="col-md-5 form-group">
           <label for="name">Name</label>
@@ -8,7 +8,9 @@
             type="text"
             id="name"
             class="form-control"
-            #nameInput>
+            name="ingredientName"
+            ngModel
+            required>
         </div>
         <div class="col-md-2 form-group">
             <label for="name">Amount</label>
@@ -16,14 +18,25 @@
               type="number"
               id="amount"
               class="form-control"
-              #amountInput>
+              name="ingredientAmount"
+              ngModel
+              required
+              pattern="^[1-9]+[0-9]*$">
           </div>
       </div>
       <div class="row">
         <div class="col-md-12">
-          <button class="btn btn-success mr-2" type="submit" (click)="onAddItem()">Add</button>
-          <button class="btn btn-danger mr-2" type="button">Delete</button>
-          <button class="btn btn-primary" type="button">Clear</button>
+          <button
+            class="btn btn-success mr-2"
+            type="submit"
+            [disabled]="!f.valid"
+            >{{ editMode ? 'Update' : 'Add'}}</button>
+          <button 
+            *ngIf="editMode"
+            class="btn btn-danger mr-2"
+            type="button"
+            (click)="onDelete()">Delete</button>
+          <button class="btn btn-primary" type="button" (click)="onClear()">Clear</button>
         </div>
       </div>
     </form>
