--- a/recipe-webapp/src/app/shopping-list/shopping-list.component.html
+++ b/recipe-webapp/src/app/shopping-list/shopping-list.component.html
@@ -4,7 +4,8 @@
     <hr>
     <ul class="list-group">
       <li class="list-group-item" style="cursor:pointer"
-        *ngFor="let ingredient of ingredients">
+        *ngFor="let ingredient of ingredients; let i = index"
+        (click)="onEditItem(i)">
         {{ingredient.name}} ({{ingredient.amount}})
       </li>
     </ul>
