--- a/recipe-webapp/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/recipe-webapp/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row mt-3">
   <div class="col-md-12">
-    <form>
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row mb-2">
         <div class="col-md-12">
           <button type="submit" class="btn btn-success mr-2">Save</button>
@@ -14,6 +14,7 @@
             <input
               type="text"
               id="name"
+              formControlName="name"
               class="form-control">
           </div>
         </div>
@@ -25,6 +26,7 @@
             <input
               type="text"
               id="imagePath"
+              formControlName="imagePath"
               class="form-control">
           </div>
         </div>
@@ -41,6 +43,7 @@
             <textarea
               type="text"
               id="description"
+              formControlName="description"
               class="form-control"
               rows="6"></textarea>
           </div>
