--- a/recipe-webapp/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/recipe-webapp/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,9 +1,14 @@
 <div class="row mt-3">
   <div class="col-md-12">
     <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+      <input type="hidden" formControlName="id" id="id">
       <div class="row mb-2">
         <div class="col-md-12">
-          <button type="submit" class="btn btn-success mr-2">Save</button>
+          <button
+            type="submit"
+            class="btn btn-success mr-2"
+            [disabled]="!recipeForm.valid"
+            >Save</button>
           <button type="button" class="btn btn-danger">Cancel</button>
         </div>
       </div>
