--- a/recipe-webapp/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/recipe-webapp/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,7 +1,6 @@
 <div class="row mt-3">
   <div class="col-md-12">
     <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
-      <input type="hidden" formControlName="id" id="id">
       <div class="row mb-2">
         <div class="col-md-12">
           <button
@@ -9,7 +8,22 @@
             class="btn btn-success mr-2"
             [disabled]="!recipeForm.valid"
             >Save</button>
-          <button type="button" class="btn btn-danger">Cancel</button>
+          <button
+            type="button"
+            class="btn btn-danger"
+            (click)="onCancel()">Cancel</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-2">
+          <div class="form-group">
+            <label for="name">Id</label>
+            <input
+              type="text"
+              id="id"
+              formControlName="id"
+              class="form-control" size="3">
+          </div>
         </div>
       </div>
       <div class="row">
