--- a/recipe-webapp/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/recipe-webapp/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -46,13 +46,14 @@
               type="text"
               id="imagePath"
               formControlName="imagePath"
-              class="form-control">
+              class="form-control"
+              #imagePath>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
-          <img src="" alt="" class="img-responsive">
+          <img [src]="imagePath.value" alt="" class="img-responsive" style="width: 632px">
         </div>
       </div>
       <div class="row">
@@ -87,7 +88,10 @@
                 class="form-control">              
             </div>
             <div class="col-md-2">
-              <button class="btn btn-danger">X</button>
+              <button
+                class="btn btn-danger"
+                type="button"
+                (click)="onDeleteIngredient(i)">X</button>
             </div>
           </div>
         </div>
