--- a/recipe-webapp/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/recipe-webapp/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -19,7 +19,7 @@
           <div class="form-group">
             <label for="name">Id</label>
             <input
-              type="text"
+              type="number"
               id="id"
               formControlName="id"
               class="form-control" size="3">
