--- a/recipe-webapp/src/app/header/header.component.html
+++ b/recipe-webapp/src/app/header/header.component.html
@@ -16,6 +16,9 @@
             <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" [routerLink]="[ '/signup']">Register</a>
             </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" [routerLink]="[ '/signin']">Login</a>
+            </li>
             <li class="nav-item dropdown" appDropdown #r="appDropdown">
                 <a class="nav-link dropdown-toggle" style="cursor: pointer;" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Manage
