--- a/recipe-webapp/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/recipe-webapp/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -72,7 +72,7 @@
       <div class="row">
         <div class="col-md-12" formArrayName="ingredients">
           <div
-            *ngFor="let ingredientControl of recipeForm.get('ingredients').controls; let i = index"
+            *ngFor="let ingredientControl of getControls(); let i = index"
             class="row mb-2"
             [formGroupName]="i">
             <div class="col-md-8">
