--- a/recipe-webapp/src/app/core/header/header.component.html
+++ b/recipe-webapp/src/app/core/header/header.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" style="cursor: pointer;" [routerLink]="['/']">Recipe Book</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button appDropdown #r="appDropdown" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse" id="navbarNav" [ngClass]="{'show': r.isOpen}">
         <ul class="navbar-nav">
             <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" [routerLink]="['/recipes']">Recipes</a>
